# rocket-cores

./: .pylintrc  README.md  pyproject.toml
rocket_cores/: constants.py  core.py  fetch_data.py  main.py  payload.py
tests/: test_rocket_cores.py
